; ModuleID = '/home/carl/AnghaBench/tig/src/extr_watch.c_watch_head_handler.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_watch.c_watch_head_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.watch_handler = type { i32 }
%struct.ref = type { i32 }

@.str = private unnamed_addr constant [8 x i8] c"%s/HEAD\00", align 1
@repo = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@WATCH_HEAD = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [17 x i8] c"%s/refs/heads/%s\00", align 1
@WATCH_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.watch_handler*, i32, i32)* @watch_head_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @watch_head_handler(%struct.watch_handler* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.watch_handler*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.ref*, align 8
  store %struct.watch_handler* %0, %struct.watch_handler** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load %struct.watch_handler*, %struct.watch_handler** %5, align 8
  %10 = getelementptr inbounds %struct.watch_handler, %struct.watch_handler* %9, i32 0, i32 0
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @repo, i32 0, i32 0), align 4
  %12 = call i64 (i32*, i8*, i32, ...) @check_file_mtime(i32* %10, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = load i32, i32* @WATCH_HEAD, align 4
  store i32 %15, i32* %4, align 4
  br label %32

16:                                               ; preds = %3
  %17 = call %struct.ref* (...) @get_ref_head()
  store %struct.ref* %17, %struct.ref** %8, align 8
  %18 = icmp ne %struct.ref* %17, null
  br i1 %18, label %19, label %30

19:                                               ; preds = %16
  %20 = load %struct.watch_handler*, %struct.watch_handler** %5, align 8
  %21 = getelementptr inbounds %struct.watch_handler, %struct.watch_handler* %20, i32 0, i32 0
  %22 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @repo, i32 0, i32 0), align 4
  %23 = load %struct.ref*, %struct.ref** %8, align 8
  %24 = getelementptr inbounds %struct.ref, %struct.ref* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i64 (i32*, i8*, i32, ...) @check_file_mtime(i32* %21, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i32 %22, i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %19
  %29 = load i32, i32* @WATCH_HEAD, align 4
  store i32 %29, i32* %4, align 4
  br label %32

30:                                               ; preds = %19, %16
  %31 = load i32, i32* @WATCH_NONE, align 4
  store i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %30, %28, %14
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i64 @check_file_mtime(i32*, i8*, i32, ...) #1

declare dso_local %struct.ref* @get_ref_head(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
